--- a/thepost/View/Templates/entry.twig
+++ b/thepost/View/Templates/entry.twig
@@ -1,8 +1,8 @@
 {% extends "index.twig" %}
 
 {% block main %}
-    <article class="article" id="article-{{ article.id }}">
-        <h1>{{ article.title }}</h1>
-        <p>{{ article.excerpt }}</p>
+    <article class="element entry" id="entry-{{ entry.id }}">
+        <h2>{{ entry.title }}</h2>
+        <p>{{ entry.content }}</p>
     </article>
 {% endblock %}
