--- a/thepost/View/Templates/index.twig
+++ b/thepost/View/Templates/index.twig
@@ -1,32 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="de_CH">
 <head>
     {% block head %}
-    <title>{{ site.title }}</title>
+        <title>{{ options.title }}</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/thepost/View/Templates/css/style.css"/>
+        <meta charset="UTF-8"/>
     {% endblock %}
 </head>
-<body>
+<body class="container">
+<h1 class="container hidden-xs">{{ options.title }}</h1>
 {% block nav %}
-{#<nav>
-    <ul>
-    {% for item in site.navigation %}
-        <li><a href="{{ item.href }}">{{ item.caption }}</a></li>
-    {% endfor %}
-    </ul>
-</nav>#}
+    <nav class="navbar navbar-inverse">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand visible-xs-block" href="#">{{ options.title }}</a>
+        </div>
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="container nav navbar-nav">
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="login">Login</a></li>
+            </ul>
+        </div>
+    </nav>
 {% endblock %}
-<main>
-    {% block main %}
-        {% for article in articles %}
-        <article class="article" id="article-{{ article.id }}">
-            <h1>{{ article.title }}</h1>
-            <p>{{ article.excerpt }}</p>
-        </article>
-        {% endfor %}
-    {% endblock %}
-</main>
-<footer>
+<div class="container-fluid">
+    <div class="content row">
+        <main class="main col-md-8">
+            {% block main %}
+                {% for article in articles %}
+                    <article class="article" id="article-{{ article.id }}">
+                        <h2>{{ article.title }}</h2>
 
+                        <p>{{ article.excerpt }}</p>
+                    </article>
+                {% endfor %}
+            {% endblock %}
+        </main>
+        {% block sidebar %}
+            <aside class="col-md-4 hidden-sm hidden-xs">
+                <article class="element widget" id="widget-{{ article.id }}">
+                    <h3>Blubdiblu</h3>
+
+                    <p>fugedifagott</p>
+                </article>
+            </aside>
+        {% endblock %}
+    </div>
+</div>
+<footer class="container">
+{{ options.copyright }}
 </footer>
+<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
 </html>
