--- a/thepost/View/Templates/index.twig
+++ b/thepost/View/Templates/index.twig
@@ -25,7 +25,7 @@
             <ul class="container nav navbar-nav">
                 {% block navitems %}
                     <li class="active"><a href="/">Home</a></li>
-                    <li><a href="login">Login</a></li>
+                    <li><a href="/login/">Login</a></li>
                 {% endblock %}
             </ul>
         </div>
@@ -37,9 +37,9 @@
             {% block main %}
                 {% for entry in entries %}
                     <article class="element entry" id="entry-{{ entry.id }}">
-                        <h2>{{ entry.title }}</h2>
+                        <h2><a href="/entry/{{ entry.id }}">{{ entry.title }}</a></h2>
 
-                        <p>{{ entry.content }}</p>
+                        <p>{{ entry.excerpt }}</p>
                     </article>
                 {% endfor %}
             {% endblock %}
