--- a/thepost/View/Templates/login.twig
+++ b/thepost/View/Templates/login.twig
@@ -1,4 +1,35 @@
+{% extends "index.twig" %}
+
 {% block navitems %}
     <li><a href="/">Home</a></li>
     <li class="active"><a href="/login/">Login</a></li>
+{% endblock %}
+
+{% block main %}
+    <div class="element">
+        <form id="loginForm" method="POST" action="/login/submit/" role="form">
+            <div class="form-group">
+                <label for="username" class="control-label">Username</label>
+
+                <div class="input-group">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></span>
+                    <input type="text" class="form-control" id="username" name="username" value="" required title="Please enter you username" placeholder="example@gmail.com">
+                </div>
+                <span class="help-block"></span>
+            </div>
+            <div class="form-group">
+                <label for="password" class="control-label">Password</label>
+
+                <div class="input-group">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span></span>
+                    <input type="password" class="form-control" id="password" name="password" value="" required title="Please enter your password">
+                </div>
+                <span class="help-block"></span>
+            </div>
+            {% if auth.failed == true %}
+                <div id="loginErrorMsg" class="alert alert-danger" role="alert">Wrong username or password</div>
+            {% endif %}
+            <button type="submit" class="btn btn-success btn-block">Login</button>
+        </form>
+    </div>
 {% endblock %}
