added comments and fixed errorController bug

--- a/thepost/View/Templates/index.twig
+++ b/thepost/View/Templates/index.twig
@@ -14,7 +14,7 @@
         </main>
         {% block sidebar %}
             <aside class="col-md-4 hidden-sm hidden-xs">
-                <article class="element widget" id="widget-{{ article.id }}">
+                <article class="element widget" id="widget">
                     <h3>Blubdiblu</h3>
 
                     <p>fugedifagott</p>
