--- a/thepost/View/Templates/css/style.css
+++ b/thepost/View/Templates/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 h1,h2,h3{
-    font-family: "Adelle","Chaparall","Georgia","Times","Times New Roman",serif;
+    font-family: "Adelle","Roboto Slab","Chaparall","Georgia","Times","Times New Roman",serif;
     font-weight: 600;
 }
 
