--- a/thepost/View/Templates/header.twig
+++ b/thepost/View/Templates/header.twig
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
         <link rel="stylesheet" href="bootstrap.css"/>
         <link rel="stylesheet" href="/thepost/View/Templates/css/style.css"/>
+        <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300' rel='stylesheet' type='text/css'>
         <meta charset="UTF-8"/>
     {% endblock %}
 </head>
