--- a/thepost/View/Templates/css/style.css
+++ b/thepost/View/Templates/css/style.css
@@ -15,6 +15,10 @@ h1{
     margin-bottom: 20px;
 }
 
+.entry {
+    margin-bottom: 20px;
+}
+
 .element {
     padding: 20px;
     background: white;
