--- a/thepost/View/Templates/entry.twig
+++ b/thepost/View/Templates/entry.twig
@@ -1,8 +1,28 @@
 {% extends "index.twig" %}
 
 {% block main %}
+
     <article class="element entry" id="entry-{{ entry.id }}">
-        <h2>{{ entry.title }}</h2>
-        <p>{{ entry.content }}</p>
+
+        {% if authentication.login %}
+
+            <h2 class="title" contenteditable="true">{{ entry.title }}</h2>
+            <p class="text" contenteditable="true">{{ entry.content }}</p>
+            <button class="update btn btn-default pull-right" onclick="upload('entry',{{ entry.id }})">
+                <span class="glyphicon glyphicon-floppy-open"></span> Update
+
+            </button>
+
+            {# glyphicon-floppy-open #}
+        {% else %}
+            <h2 class="title" >{{ entry.title }}</h2>
+            <p class="text">{{ entry.content }}</p>
+        {% endif %}
+
     </article>
+
+{% endblock %}
+
+{% block scripts %}
+    <script src="/thepost/View/Templates/js/upload.js"></script>
 {% endblock %}
