--- a/thepost/View/Templates/entry.twig
+++ b/thepost/View/Templates/entry.twig
@@ -2,7 +2,7 @@
 
 {% block main %}
 
-    <article class="element entry" id="entry-{{ entry.id }}">
+    <article class="element entry clearfix" id="entry-{{ entry.id }}">
 
         {% if authentication.login %}
 
