--- a/thepost/View/Templates/error.twig
+++ b/thepost/View/Templates/error.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block main %}
-    <article class="element entry">
+    <article class="element entry clearfix">
         <h2>Error</h2>
 
         <div class="alert alert-danger" role="alert">
