--- a/thepost/View/Templates/login.twig
+++ b/thepost/View/Templates/login.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <div class="element">
+    <div class="element clearfix">
         <form id="loginForm" method="POST" action="/login/submit/" role="form">
             <div class="form-group">
                 <label for="username" class="control-label">Username</label>
