added navbar functionality "active class" with macro

--- a/thepost/View/Templates/entry.twig
+++ b/thepost/View/Templates/entry.twig
@@ -9,8 +9,8 @@
             <h2 class="title" contenteditable="true">{{ entry.title }}</h2>
             <p class="text" contenteditable="true">{{ entry.content }}</p>
             <button class="update btn btn-default pull-right" onclick="upload('entry',{{ entry.id }})">
-                <span class="glyphicon glyphicon-floppy-open"></span> Update
-
+                <span class="glyphicon glyphicon-floppy-open"></span>
+                <span class="update"> Update</span>
             </button>
 
             {# glyphicon-floppy-open #}
