--- a/thepost/View/Templates/index.twig
+++ b/thepost/View/Templates/index.twig
@@ -7,7 +7,7 @@
                     <article class="element entry clearfix" id="entry-{{ entry.id }}">
                         <h2><a href="/entry/{{ entry.id }}">{{ entry.title }}</a></h2>
 
-                        <p>{{ entry.excerpt }}</p>
+                        <p>{{ entry.excerpt|raw }}</p>
                     </article>
                 {% endfor %}
             {% endblock %}
