Added Summernote WYSIWYG Editor Added scripts block

--- a/thepost/View/Templates/index.twig
+++ b/thepost/View/Templates/index.twig
@@ -1,3 +1,6 @@
+{% include 'head.twig' %}
+{% block styles %}
+{% endblock %}
 {% include 'header.twig' %}
 <div class="container-fluid">
     <div class="content row">
@@ -7,7 +10,7 @@
                     <article class="element entry clearfix" id="entry-{{ entry.id }}">
                         <h2><a href="/entry/{{ entry.id }}">{{ entry.title }}</a></h2>
 
-                        <p>{{ entry.excerpt|raw }}</p>
+                        <div>{{ entry.content|raw }}</div>
                     </article>
                 {% endfor %}
             {% endblock %}
