Added Summernote WYSIWYG Editor

--- a/thepost/View/Templates/index.twig
+++ b/thepost/View/Templates/index.twig
@@ -1,5 +1,6 @@
 {% include 'head.twig' %}
 {% block styles %}
+    <link rel="stylesheet" href="/thepost/View/Templates/css/style.css"/>
 {% endblock %}
 {% include 'header.twig' %}
 <div class="container-fluid">
