--- a/thepost/View/Templates/entry.twig
+++ b/thepost/View/Templates/entry.twig
@@ -1,8 +1,7 @@
 {% extends "index.twig" %}
 
 {% block styles %}
-    {{ parent() }}
-    <link rel="stylesheet" href="/thepost/View/Templates/css/summernote.css"/>
+    <link rel="stylesheet" href="/thepost/View/Templates/css/style-summernote.css"/>
 {% endblock %}
 
 {% block main %}
@@ -30,7 +29,7 @@
 
 {% block scripts %}
     <script src="/thepost/View/Templates/js/upload.js"></script>
-    <script src="/thepost/View/Templates/js/summernote.js"></script>
+    <script src="/thepost/View/Templates/js/summernote.min.js"></script>
     <script>
         $(document).ready(function() {
             $('.summernote').summernote().code('{{ entry.content|raw }}');
