added .option class

--- a/thepost/View/Templates/css/style.css
+++ b/thepost/View/Templates/css/style.css
@@ -22,6 +22,10 @@ h1{
     margin-bottom: 20px;
 }
 
+.option {
+    margin-bottom: 20px;
+}
+
 .element {
     padding: 20px;
     background: white;
