added functionalityy saving options

--- a/thepost/View/Templates/entry.twig
+++ b/thepost/View/Templates/entry.twig
@@ -12,7 +12,7 @@
 
             <h2 class="title onedit" contenteditable="true">{{ entry.title }}</h2>
             <div class="text onedit summernote"></div>
-            <button class="update btn btn-default pull-right" onclick="upload('entry',{{ entry.id }})">
+            <button class="update btn btn-default pull-right" onclick="uploadEntry('entry',{{ entry.id }})">
                 <span class="glyphicon glyphicon-floppy-open"></span>
                 <span class="update"> Update</span>
             </button>
