--- a/ThePost/View/Templates/head.twig
+++ b/ThePost/View/Templates/head.twig
@@ -5,5 +5,5 @@
         <title>{{ options.title }}</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
         <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300' rel='stylesheet' type='text/css'>
-        <meta charset="UTF-8"/>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     {% endblock %}
