--- a/ThePost/View/Templates/css/style.css
+++ b/ThePost/View/Templates/css/style.css
@@ -11,6 +11,11 @@ h1{
     font-size: 6rem;
 }
 
+.navbar-text{
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
 .main {
     margin-bottom: 20px;
 }
@@ -57,3 +62,9 @@ h1{
          -webkit-transform: rotate(1turn);
      }
  }
+
+@media (max-width:768px) {
+    .container{
+        padding: 0;
+    }
+}
