--- a/ThePost/View/Templates/error.twig
+++ b/ThePost/View/Templates/error.twig
@@ -12,7 +12,7 @@
         <div class="alert alert-danger" role="alert">
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             <span class="sr-only">Error:</span>
-            {{ type }} {{ error.msg }} not found!
+            {{ type }} {{ error.page }} {{ error.msg }}
         </div>
     </article>
 {% endblock %}
