--- a/ThePost/View/Templates/settings.twig
+++ b/ThePost/View/Templates/settings.twig
@@ -4,19 +4,24 @@
     {% if authentication.login %}
 
         <form class="element clearfix" action="/settings/submit" method="post">
-        {% for setting in settings %}
-            <div class="form-group clearfix">
-                <label for="setting-{{ setting.key }}">{{ setting.key }}</label>
-                <div class="form-inline">
-                    <input type="text" class="input-setting-{{ setting.key }} form-control" id="setting-{{ setting.key }}" name="settings[{{ setting.key }}]" value="{{ setting.value }}">
-                    <button class="setting-{{ setting.key }} update btn btn-default" onclick="uploadOptions('setting','{{ setting.key }}',event);">
-                        <span class="setting-{{ setting.key }} glyphicon glyphicon-floppy-open"></span>
-                        <span class="string-setting-{{ setting.key }} update"> Save</span>
-                    </button>
-                </div>
+            {% for setting in settings %}
+                <div class="form-group clearfix">
+                    <label for="setting-{{ setting.key }}">{{ setting.title }}</label>
 
-            </div>
-        {% endfor %}
+                    <div class="form-inline">
+                        <input type="text" class="input-setting-{{ setting.key }} form-control"
+                               id="setting-{{ setting.key }}" name="settings[{{ setting.key }}]"
+                               value="{{ setting.value }}">
+                        <button class="setting-{{ setting.key }} update btn btn-default"
+                                onclick="uploadOptions('setting','{{ setting.key }}',event);">
+                            <span class="setting-{{ setting.key }} glyphicon glyphicon-floppy-open"></span>
+                            <span class="string-setting-{{ setting.key }} update"> Save</span>
+                        </button>
+                    </div>
+                    <p class="setting-{{ setting.key }} help-block">{{ setting.description }}</p>
+
+                </div>
+            {% endfor %}
             <button class="setting-all update btn btn-default" type="submit">
                 <span class="setting-all glyphicon glyphicon-floppy-open"></span>
                 <span class="string-setting-all update"> Save all</span>
@@ -39,5 +44,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="/ThePost/View/Templates/js/upload.js"></script>
+    <script src="/ThePost/View/Templates/js/upload.js"></script>
 {% endblock %}
