Get widget from options

--- a/ThePost/View/Templates/index.twig
+++ b/ThePost/View/Templates/index.twig
@@ -16,9 +16,9 @@
         {% block sidebar %}
             <aside class="col-md-4 hidden-sm hidden-xs">
                 <article class="element widget" id="widget">
-                    <h3>Blubdiblu</h3>
+                    <h3>{{ options.welcome_title }}</h3>
 
-                    <p>fugedifagott</p>
+                    <p>{{ options.welcome_content }}</p>
                 </article>
             </aside>
         {% endblock %}
