Added installation styles

--- a/ThePost/View/Templates/css/style.css
+++ b/ThePost/View/Templates/css/style.css
@@ -45,6 +45,26 @@ input[type='color'].form-control  {
     background: white;
 }
 
+.form-group{
+    margin-bottom: 25px;
+}
+
+.section {
+    margin-bottom: 40px;
+}
+
+.color {
+    margin: -4px;
+    padding: 0;
+    height: 2em;
+    width: 1.8em;
+    -webkit-appearance: caret;
+}
+
+input[type="color"]{
+    border: none;
+}
+
 .note-editor{
     margin-bottom: 10px;
 }
@@ -53,6 +73,63 @@ input[type='color'].form-control  {
     -webkit-animation: rotate 1s linear infinite;
     -o-animation: rotate 1s linear infinite;
     animation: rotate 1s linear infinite;
+}
+
+.bs-callout {
+    padding: 20px;
+    margin: 20px 0;
+    border: 1px solid #eee;
+    border-left-width: 5px;
+    border-radius: 3px;
+}
+.bs-callout h4 {
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+.bs-callout p:last-child {
+    margin-bottom: 0;
+}
+.bs-callout code {
+    border-radius: 3px;
+}
+.bs-callout+.bs-callout {
+    margin-top: -5px;
+}
+.bs-callout-default {
+    border-left-color: #777;
+}
+.bs-callout-default h4 {
+    color: #777;
+}
+.bs-callout-primary {
+    border-left-color: #428bca;
+}
+.bs-callout-primary h4 {
+    color: #428bca;
+}
+.bs-callout-success {
+    border-left-color: #5cb85c;
+}
+.bs-callout-success h4 {
+    color: #5cb85c;
+}
+.bs-callout-danger {
+    border-left-color: #d9534f;
+}
+.bs-callout-danger h4 {
+    color: #d9534f;
+}
+.bs-callout-warning {
+    border-left-color: #f0ad4e;
+}
+.bs-callout-warning h4 {
+    color: #f0ad4e;
+}
+.bs-callout-info {
+    border-left-color: #5bc0de;
+}
+.bs-callout-info h4 {
+    color: #5bc0de;
 }
 
 @keyframes rotate {
