--- a/ThePost/View/Templates/header.twig
+++ b/ThePost/View/Templates/header.twig
@@ -21,7 +21,7 @@
                     <li class="dropdown">
                         <a href="/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Add</a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="/">Eintrag</a></li>
+                            <li><a href="/add/entry">Eintrag</a></li>
                         </ul>
                     </li>
 
