--- a/ThePost/View/Templates/error.twig
+++ b/ThePost/View/Templates/error.twig
@@ -1,5 +1,9 @@
 {% extends "index.twig" %}
 
+{% block title %}
+    <title>Error | {{ options.title }}</title>
+{% endblock %}
+
 {% block navitems %}
     <li><a href="/">Home</a></li>
     <li><a href="/login/">Login</a></li>
@@ -12,7 +16,7 @@
         <div class="alert alert-danger" role="alert">
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             <span class="sr-only">Error:</span>
-            {{ type }} {{ error.page }} {{ error.msg }}
+            {{ type }} {{ error.page }} {{ error.msg|raw }}
         </div>
     </article>
 {% endblock %}
