--- a/ThePost/View/Templates/login.twig
+++ b/ThePost/View/Templates/login.twig
@@ -1,5 +1,9 @@
 {% extends "index.twig" %}
 
+{% block title %}
+    <title>Login | {{ options.title }}</title>
+{% endblock %}
+
 {% block navitems %}
     <li><a href="/">Home</a></li>
 {% endblock %}
