--- a/ThePost/View/Templates/settings.twig
+++ b/ThePost/View/Templates/settings.twig
@@ -1,5 +1,9 @@
 {% extends "index.twig" %}
 
+{% block title %}
+    <title>Settings | {{ options.title }}</title>
+{% endblock %}
+
 {% block main %}
     {% if authentication.login %}
 
