--- a/ThePost/View/Templates/index.twig
+++ b/ThePost/View/Templates/index.twig
@@ -1,4 +1,9 @@
 {% include 'head.twig' %}
+
+        {% block title %}
+            <title>{{ options.title }}</title>
+        {% endblock %}
+
 {% include 'header.twig' %}
 <div class="container-fluid">
     <div class="content row">
@@ -36,6 +41,9 @@
     /* User Styles */
     body{
         background-color: {{ options.style_backgroundcolor }};
+    }
+    h2 {
+        color: {{ options.style_h2color }};
     }
 </style>
 <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
